--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         />
 
         <h1>Alessandro Neves</h1>
-        <h2>Desenvolvedor junior, atualmente morando em Portugal - Lisboa.</h2>
+        <h2>Junior Developer currently living in Lisbon, Portugal.</h2>
       </div>
 
       <ul class="social">
@@ -72,7 +72,7 @@
           </a>
         </li>
       </ul>
-      <footer>Developer by Alessandro Neves</footer>
+      <footer>Developed by Alessandro Neves</footer>
     </div>
     
   </body>
