--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </a>
         </li>
       </ul>
-      <footer>Developed by Alessandro Neves</footer>
+      <footer>Developed by Lelis Coder</footer>
     </div>
     
   </body>
